Make library work

--- a/projects/ngx-collapse-animated/package.json
+++ b/projects/ngx-collapse-animated/package.json
@@ -8,5 +8,10 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
+  "exports": {
+    ".": {
+      "css": "./styles/collapse-animated.css"
+    }
+  },
   "sideEffects": false
 }
