--- a/projects/ngx-collapse-animated/package.json
+++ b/projects/ngx-collapse-animated/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.5",
   "peerDependencies": {
     "@angular/common": "^18.0.0",
-    "@angular/core": "^18.0.0"
+    "@angular/core": "^18.0.0",
+    "@angular/animations": "^18.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
