--- a/projects/ngx-collapse-animated/package.json
+++ b/projects/ngx-collapse-animated/package.json
@@ -2,9 +2,9 @@
   "name": "ngx-collapse-animated",
   "version": "0.0.5",
   "peerDependencies": {
-    "@angular/common": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/animations": "^18.0.0"
+    "@angular/common": ">=17 || >30",
+    "@angular/core": ">=17 || >30",
+    "@angular/animations": ">=17 || >30"
   },
   "dependencies": {
     "tslib": "^2.3.0"
