--- a/projects/ngx-collapse-animated/package.json
+++ b/projects/ngx-collapse-animated/package.json
@@ -1,6 +1,23 @@
 {
   "name": "ngx-collapse-animated",
   "version": "0.0.6",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AlexKhymenko/ngx-collapse-animated"
+  },
+  "author": {
+    "name": "Oleksandr Khymenko",
+    "email": "alexanderKhymenko@gmail.com"
+  },
+  "keywords": [
+    "angular",
+    "collapse",
+    "collapseble",
+    "colapsed",
+    "bootstrap",
+    "animation",
+    "animated"
+  ],
   "peerDependencies": {
     "@angular/common": ">=17 || >30",
     "@angular/core": ">=17 || >30",
